terminer avec la partie gauche du cv

--- a/cv.html
+++ b/cv.html
@@ -13,35 +13,70 @@
             <div class="gauche">
                 <div class="haut">
                     <p class="nom">Mohamed Traore</p>
-                    <div class="nom-dev">Developpeur Full Stack</div>
+                    <p class="nom-dev">Developpeur Full Stack</p>
                     <div class="img-tete">
                         <img src="matof.jpg" alt="Ma photo de profil" class="tof">
                     </div>
                 </div>
                 <div class="milieu">
-                    <div class="m1"><i class="fa-solid fa-user"></i><p class="contact">Contactez-Moi</p></div>
+                    <div class="m1"><i class="fa-solid fa-circle-user id" id="con"></i><p class="contact">CONTACTEZ-MOI</p></div>
                     <div class="m2"><i class="fa-solid fa-phone-volume"></i><p class="tel">+22372001272</p></div>
                     <div class="m3"><i class="fa-solid fa-globe"></i><p class="site">WWW.siteweb.com</p></div>
                     <div class="m4"><i class="fa-solid fa-location-dot"></i><p class="map">Bamako,Mali</p></div>
                 </div>
                 <div class="bas">
-                    <div class="b1"><i class="fa-solid fa-graduation-cap"></i><p class="parcours">Parcours</p></div>
-                    <p class="lycee">Lycee CADT</p>
-                    <p class="bac">Baccalaureat Malien 2018-2019</p>
+                    <div class="b1"><i class="fa-solid fa-graduation-cap" id="grad"></i><p class="parcours">PARCOURS</p></div>
+                    <p class="lycee">LYCEE CADT</p>
+                    <p class="bac">Baccalaureat Malien <br> 2018-2019</p>
                     <p class="enetp">ENETP</p>
-                    <p class="master">Master Electronique 2023-2024</p>
-                    <div class="b1"><i class="fa-solid fa-users"></i><p class="reference">References</p></div>
+                    <p class="master">Master Electronique <br> 2023-2024</p>
+                    <div class="b2"><i class="fa-solid fa-users" id="ref"></i><p class="reference">REFERENCES</p></div>
                     <p class="amadou">Amadou Diarra</p>
-                    <p class="rue">Rue : 906, Djicoroni</p>
+                    <p class="rue1">Rue : 906, Djicoroni</p>
                     <p class="ousmane">Ousmane Ballo</p>
-                    <p class="rue">Rue : 78, Kalaban-coro</p>
+                    <p class="rue2">Rue : 78, Kalaban-coro</p>
                 </div>
             </div>
         </div>
         <div class="droite">
-            <p>content</p>
+            <div class="Apropos">
+                <div class="apro"><i class="fa-solid fa-circle-user" id="prop"></i><p class="propo-text">A PROPOS DE MOI</p></div>
+                <p class="texto">Passionné par la robotique , l’intelligence  artificielle   et 
+                    l’internet des objets   (ODO)
+                    Je développe mes expertise
+                    en  informatique    pour concevoir    
+                    des   systèmes toujours intelligents et connectés..
+                </p>
+            </div>
+            <div class="Experiencepro">
+                <div class="exp"><i class="fa-solid fa-suitcase" id="experi"></i><p class="experi-text">Experience-Pro</p></div>
+                <p class="exp1">Web UX/UI Designer <br> 
+                    Demacon, agence reconnue pour sa performance.
+                    2022-2024</p>
+                <p class="exp2">Product Designer <br> 
+                    Konatech Agency 2020-2022</p>
+                <p class="exp3">Motion Designer <br> 
+                    Passion digitale reconnue pour sa  strategie digitale
+                    2019-2020
+                </p>
+            </div>
+            <div class="skills">
+                <div class="sqil"><i class="fa-solid fa-user" id="sqili"></i><p class="squil-text">SKILLS</p></div>
+                <div class="htm"><p class="htm-text">HTML/CSS</p></div>
+                <div class="adobe"><p class="adobe-text">Adobe Illustrator</p></div>
+                <div class="microsoft"><p class="microsoft-text">Microsoft Words</p></div>
+            </div>
+            <div class="langage">
+                <div class="lang"><i class="fa-solid fa-user" id="langa"></i><p class="lang-text">Language</p></div>
+                <p class="anglais">Anglais</p>
+                <p class="francais">Francais</p>
+            </div>
+            <div class="hobby">
+                <div class="hobby"><i class="fa-solid fa-user" id="hob"></i><p class="hobby-text">HOBBY</p></div>
+                <p class="lecture">Lecture</p>
+            </div>
         </div>
-    </main>
-    
+        <div class="fin-espace"></div>
+    </main>  
 </body>
 </html>
