div à gauche terminer

--- a/cv.html
+++ b/cv.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <title>Mon Cv</title>
 </head>
-<body>
+<body class="cv">
     <main class="contenu">
-        <div class="gauche-grand">
+        
             <div class="gauche">
                 <div class="haut">
                     <p class="nom">Mohamed Traore</p>
@@ -25,19 +25,19 @@
                     <div class="m4"><i class="fa-solid fa-location-dot"></i><p class="map">Bamako,Mali</p></div>
                 </div>
                 <div class="bas">
-                    <div class="b1"><i class="fa-solid fa-graduation-cap" id="grad"></i><p class="parcours">PARCOURS</p></div>
+                    <div class="b1"><div class="cerclegrad"><i class="fa-solid fa-graduation-cap" id="grad"></i></div><p class="parcours">PARCOURS</p></div>
                     <p class="lycee">LYCEE CADT</p>
                     <p class="bac">Baccalaureat Malien <br> 2018-2019</p>
                     <p class="enetp">ENETP</p>
                     <p class="master">Master Electronique <br> 2023-2024</p>
-                    <div class="b2"><i class="fa-solid fa-users" id="ref"></i><p class="reference">REFERENCES</p></div>
+                    <div class="b2"><div class="cercleref"><i class="fa-solid fa-users" id="ref"></i></div><p class="reference">REFERENCES</p></div>
                     <p class="amadou">Amadou Diarra</p>
                     <p class="rue1">Rue : 906, Djicoroni</p>
                     <p class="ousmane">Ousmane Ballo</p>
                     <p class="rue2">Rue : 78, Kalaban-coro</p>
                 </div>
             </div>
-        </div>
+        
         <div class="droite">
             <div class="Apropos">
                 <div class="apro"><i class="fa-solid fa-circle-user" id="prop"></i><p class="propo-text">A PROPOS DE MOI</p></div>
@@ -75,8 +75,7 @@
                 <div class="hobby"><i class="fa-solid fa-user" id="hob"></i><p class="hobby-text">HOBBY</p></div>
                 <p class="lecture">Lecture</p>
             </div>
-        </div>
-        <div class="fin-espace"></div>
+        </div>    
     </main>  
 </body>
 </html>
