cv html/css terminer il reste de JS

--- a/cv.html
+++ b/cv.html
@@ -39,7 +39,7 @@
             </div>
         
         <div class="droite">
-            <div class="Apropos">
+            <div class="apropos">
                 <div class="apro"><i class="fa-solid fa-circle-user" id="prop"></i><p class="propo-text">A PROPOS DE MOI</p></div>
                 <p class="texto">Passionné par la robotique , l’intelligence  artificielle   et 
                     l’internet des objets   (ODO)
@@ -48,32 +48,38 @@
                     des   systèmes toujours intelligents et connectés..
                 </p>
             </div>
-            <div class="Experiencepro">
-                <div class="exp"><i class="fa-solid fa-suitcase" id="experi"></i><p class="experi-text">Experience-Pro</p></div>
-                <p class="exp1">Web UX/UI Designer <br> 
+            <div class="experiencepro">
+                <div class="exp"><div class="cercleexperi"><i class="fa-solid fa-briefcase"  id="experi"></i></div><p class="experi-text">EXPERIENCE-PRO</p></div>
+                <p class="exp1"><span class="web">Web UX/UI Designer </span> <br> 
                     Demacon, agence reconnue pour sa performance.
-                    2022-2024</p>
-                <p class="exp2">Product Designer <br> 
-                    Konatech Agency 2020-2022</p>
-                <p class="exp3">Motion Designer <br> 
+                   <br> 2022-2024</p>
+                <p class="exp2"><span class="product">Product Designer</span> <br> 
+                    Konatech Agency <br>2020-2022</p>
+                <p class="exp3"><span class="motion">Motion Designer </span><br> 
                     Passion digitale reconnue pour sa  strategie digitale
-                    2019-2020
+                   <br> 2019-2020
                 </p>
             </div>
             <div class="skills">
-                <div class="sqil"><i class="fa-solid fa-user" id="sqili"></i><p class="squil-text">SKILLS</p></div>
-                <div class="htm"><p class="htm-text">HTML/CSS</p></div>
-                <div class="adobe"><p class="adobe-text">Adobe Illustrator</p></div>
-                <div class="microsoft"><p class="microsoft-text">Microsoft Words</p></div>
+                <div class="sqil"><div class="circlesquil"><i class="fa-solid fa-chart-pie" class="chart"></i></div><p class="squil-text">SKILLS</p></div>
+                <div class="htm"><p class="htm-text">HTML/CSS</p>
+                    <progress value="40" max="100" class="prog1"></progress>
+                </div>
+                <div class="adobe"><p class="adobe-text">Adobe Illustrator</p>
+                    <progress value="40" max="100" class="prog2"></progress>
+                </div>
+                <div class="microsoft"><p class="microsoft-text">Microsoft Words</p>
+                    <progress value="40" max="100" class="prog3"></progress>
+                </div>
             </div>
             <div class="langage">
-                <div class="lang"><i class="fa-solid fa-user" id="langa"></i><p class="lang-text">Language</p></div>
-                <p class="anglais">Anglais</p>
-                <p class="francais">Francais</p>
+                <div class="lang"><div class="cerclelang"><i class="fa-solid fa-globe" id="langico"></i></div><p class="lang-text">Language</p></div>
+                <div class="glob1"><div class="l1"></div><p class="anglais">Anglais</p></div>
+                <div class="glob2"><div class="l2"></div><p class="francais">Francais</p></div>
             </div>
-            <div class="hobby">
-                <div class="hobby"><i class="fa-solid fa-user" id="hob"></i><p class="hobby-text">HOBBY</p></div>
-                <p class="lecture">Lecture</p>
+            <div class="hobbies">
+                <div class="hobby"><div class="cercleflag"><i class="fa-regular fa-flag" id="hob"></i></div><p class="hobby-text">HOBBY</p></div>
+                <div class="lec"><div class="hobbies2"></div><p class="lecture">Lecture</p></div>
             </div>
         </div>    
     </main>  
