il reste la mise en page A4

--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <title>Mon Cv</title>
+    <script src="script.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" defer></script>
 </head>
 <body class="cv">
     <main class="contenu" id="contenue">
@@ -88,7 +90,6 @@
         <button class="couleur" type="button" onclick="changerCouleur()">Changer la Couleur</button>
         <button class="telecharger" onclick="telecharger()">Telecharger !</button>
     </div>
-    <script src="script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
 </body>
 </html>
