il reste la partie responsive

--- a/cv.html
+++ b/cv.html
@@ -63,15 +63,15 @@
                 </p>
             </div>
             <div class="skills">
-                <div class="sqil"><div class="circlesquil"><i class="fa-solid fa-chart-pie" class="chart"></i></div><p class="squil-text">SKILLS</p></div>
+                <div class="sqil"><div class="circlesquil"><i class="fa-solid fa-chart-pie" id="chart"></i></div><p class="squil-text">SKILLS</p></div>
                 <div class="htm"><p class="htm-text">HTML/CSS</p>
-                    <progress value="40" max="100" class="prog1"></progress>
+                    <div class="progress1"><div class="inprogress1"></div></div>
                 </div>
                 <div class="adobe"><p class="adobe-text">Adobe Illustrator</p>
-                    <progress value="40" max="100" class="prog2"></progress>
+                    <div class="progress2"><div class="inprogress2"></div></div>
                 </div>
                 <div class="microsoft"><p class="microsoft-text">Microsoft Words</p>
-                    <progress value="40" max="100" class="prog3"></progress>
+                    <div class="progress3"><div class="inprogress3"></div></div>
                 </div>
             </div>
             <div class="langage">
@@ -83,13 +83,13 @@
                 <div class="hobby"><div class="cercleflag"><i class="fa-regular fa-flag" id="hob"></i></div><p class="hobby-text">HOBBY</p></div>
                 <div class="lec"><div class="hobbies2"></div><p class="lecture">Lecture</p></div>
             </div>
-        </div>    
+        </div> 
+           
     </main>  
     <div class="mesboutons" >
         <button class="retour" class="no-print" type="button" onclick="retour()"> Retour </button>
         <button class="couleur" type="button" onclick="changerCouleur()">Changer la Couleur</button>
         <button class="telecharger" onclick="telecharger()">Telecharger !</button>
     </div>
-
 </body>
 </html>
